--- a/test.css
+++ b/test.css
@@ -73,7 +73,7 @@ ul{
 h4{
 	padding-top: 50px;
   	padding-right: 30px;
-  	padding-left: 80px;
+  	position: static;
   	outline-style: groove;
   	max-width: 500px;
 }
